# kohelet

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  project_requirements.md  roadmap.md  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
.agents/skills/css-modules-ui/: SKILL.md
.agents/skills/docs-maintenance/: SKILL.md
.agents/skills/i18n-ui/: SKILL.md
.agents/skills/rich-text-editor/: SKILL.md
.agents/skills/tauri-storage/: SKILL.md
.agents/skills/testing-react/: SKILL.md
.github/workflows/: ci.yml  dependency-check.yml  generate-lockfile.yml
docs/: architecture.md  codex-workflow.md  data-model.md  decisions.md  dependency-installation.md  editor-core.md  export.md  glossary.md  i18n.md  index.md  patron_cierre_nativo_y_recuperacion_borrador.md  release.md  storage.md  task.md  testing.md
docs/phases/: phase-00-repository-setup.md  phase-01-foundation.md  phase-02-editor-core.md  phase-05-storage-recovery.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  project_file_storage.rs
src/app/: App.module.css  App.test.tsx  App.tsx  AppRoutes.tsx
src/components/contextual/: ContextPanel.tsx  SceneContextPanel.tsx  StoryWorldContextPanel.tsx  WorkContextPanel.tsx
src/components/editor/: EditorShell.module.css  EditorShell.tsx  EditorStatusBar.module.css  EditorStatusBar.tsx  RichTextEditor.module.css  RichTextEditor.tsx  (+2 more)
src/i18n/: i18n.test.ts  i18n.ts
src/styles/: globals.css  tokens.css
(+49 files in other folders)
